在选项中添加了可选的token参数，此参数会在插件发起的所有请求的header中以authorization:token xxxx 的形式被发送，服务器可据此进行用户认证。

--- a/optionsE.html
+++ b/optionsE.html
@@ -218,7 +218,9 @@
       <div>
         <div id="databaseArea">
           <label class="label first">数据储存地址</label>
-          <input class="dialogInput" id="dataBaseURL" type="text" placeholder="https://*******.firebaseio.com/******" autocomplete="true">
+          <input class="dialogInput" id="dataBaseURL" type="text" placeholder="http://password.sxyandapp.top" autocomplete="true">
+		  <label class="label first">访问令牌（可选）</label>
+		  <input class="dialogInput" id="dataBaseTOKEN" type="text" autocomplete="true">
         </div>
         <div id="passwordArea" style="display: none;">
           <label class="label first">主密码</label>
