修改了插件图标

--- a/optionsE.html
+++ b/optionsE.html
@@ -218,7 +218,7 @@
       <div>
         <div id="databaseArea">
           <label class="label first">数据储存地址</label>
-          <input class="dialogInput" id="dataBaseURL" type="text" placeholder="http://password.sxyandapp.top" autocomplete="true">
+          <input class="dialogInput" id="dataBaseURL" type="text" placeholder="" autocomplete="true">
 		  <label class="label first">访问令牌（可选）</label>
 		  <input class="dialogInput" id="dataBaseTOKEN" type="text" autocomplete="true">
         </div>
